--- a/index.html
+++ b/index.html
@@ -6,27 +6,36 @@
   <title>Blackjack Main Page</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
+  <audio id= "sound">
+      <source src="http://www.soundjay.com/misc/sounds/shuffling-cards-5.mp3"/>
+  </audio>
 </head>
 <body>
-    <h1>Welcome to Blackjack</h1>
-    <div class='player-info' name='house'>
-        <h2>House Score: 0</h2>
-        <div class="card-container" player="house"></div>
-    </div>
-
-    <div class='player-info' name='user'>
-        <h2>Your Score: 0</h2>
-        <div class="card-container" player="user"></div>
-        <div class="card-container-dub" player="user">
-            <h2>Your Score: 0</h2>
+    <header>
+        <h1>Are you ready to play?</h1>
+        <button id='estarte' type='button'>Yes!</button>
+    </header>
+    <div id='game-center'>
+        <h1>Welcome to Blackjack</h1>
+        <div class='player-info' name='house'>
+            <h2>House Score: 0</h2>
+            <div class="card-container" player="house"></div>
         </div>
+
+        <div class='player-info' name='user'>
+            <h2>Your Score: 0</h2>
+            <div class="card-container" player="user"></div>
+            <div class="card-container-dub" player="user">
+                <h2>Your Score: 0</h2>
+            </div>
+        </div>
+        <h2 id='dialog'></h2>
+        <label for='bet-brn'>Place Your Bet: </label><br>
+        <input type='number' id='bet-btn' min=50 max=1000><br>
+        <button type="button" id="split-btn">Split</button>
+        <button type="button" id="double-btn">Double</button>
+        <button type="button" id="hit-btn">Hit</button>
+        <button type="button" id="stay-btn">Stay</button>
+        <button type="button" id="new-game">New Game</button>
     </div>
-    <h2 id='dialog'></h2>
-    <label for='bet-brn'>Place Your Bet: </label><br>
-    <input type='number' id='bet-btn' min=50 max=1000><br>
-    <button type="button" id="split-btn">Split</button>
-    <button type="button" id="double-btn">Double</button>
-    <button type="button" id="hit-btn">Hit</button>
-    <button type="button" id="stay-btn">Stay</button>
-    <button type="button" id="new-game">New Game</button>
 </body>
