Added separate cards & chips files... plus more front-end tinkering

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <header>
         <form id='login-form'>
             <h1>Login Page</h1>
+            <div id='bj-pics'>
+                <img id='cards-pic' src='./other-images/cards.jpg'>
+                <img id='chips-pic' src='./other-images/chips.jpg'>
+            </div>
             <p></p>
             <label for='username'>Username</label>
             <input type='text' name='username'><br>
             <label for='password'>Password</label>
-            <input type='text' name='password'><br>
+            <input type='password' name='password'><br>
             <input type='submit' value='Login or Create Account'>
         </form>
     </header>
@@ -31,21 +35,18 @@
 
         <div class='player-info' name='user'>
             <h2>Your Score: 0</h2>
-            <h2>Balance: </h2>
-            <h2>Bet: </h2>
+            <h2>Balance: $1,000</h2>
+            <h2></h2>
             <div class="card-container" player="user"></div>
-            <div class="card-container-dub" player="user">
-                <h2>Your Score: 0</h2>
-            </div>
         </div>
         <h2 id='dialog'></h2>
         <form id='bet-form'>
             <h2>Bet: $0</h2>
-            <div id = 'chip-list'></div>
+            <div id='chip-list'></div>
             <input type='submit'>
             <button type='button' name='reset'>Reset</button>
         </form>
-        <button type="button" id="split-btn">Split</button>
+        <!-- <button type="button" id="split-btn">Split</button> -->
         <button type="button" id="double-btn">Double</button>
         <div id='player-turn-buttons'>
             <button type="button" id="hit-btn">Hit</button>
