Got splitter to work, visually at least!

--- a/demo.html
+++ b/demo.html
@@ -35,14 +35,18 @@
                     <h2>Your Score: </h2>
                     <div class='card-holder'>
                     </div>
-                <div class='play-buttons'>
-                    <button id='hit'>Hit</button>
-                    <button id='stay'>Stay</button>
-                </div>
-                <button id='winner'>Get Winner</button>
-                <button id='new-game'>New Game</button>
+                    <div class='card-holder-dub'>
+                    </div>
+                    <button id='double'>Double</button>
+                    <button id='split'>Split</button>
+                    <div class='play-buttons'>
+                        <button id='hit'>Hit</button>
+                        <button id='stay'>Stay</button>
+                    </div>
                 </div>
             </div>
+            <button id='winner'>Get Winner</button>
+            <button id='new-game'>New Game</button>
             <p id='dialog'></p>
         </div>
     </body>
